# gamification-engine

./: CHANGELOG.md  LICENSE  gamification-engine.cabal
app/: Main.hs
src/: MyLib.hs
