cabal-version:      3.0
name:               gamification-engine
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Olivier Lischer
maintainer:         olivier.lischer@liolin.ch
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, uuid, aeson
    hs-source-dirs:   src
    default-language: Haskell2010

executable gamification-engine
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        gamification-engine

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite gamification-engine-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        gamification-engine
